# skills

skills/0x5446/ohmytoken-tracker/: _meta.json
skills/0xmythril/clawdtm/: _meta.json
skills/0xnyk/xint/: _meta.json
skills/1991513ccie-png/focus-music/: _meta.json
skills/1991513ccie-png/mexican-cooking/: SKILL.md  _meta.json
skills/1991513ccie-png/personal-growth/: _meta.json
skills/1991513ccie-png/visualization/: _meta.json
skills/1999azzar/memory-cache/: SKILL.md  _meta.json
skills/1kalin/afrexai-ad-ops/: _meta.json
skills/1kalin/afrexai-agent-observability/: _meta.json
skills/1kalin/afrexai-board-reporting/: _meta.json
skills/1kalin/afrexai-career-accelerator/: _meta.json
skills/1kalin/afrexai-customer-onboarding/: README.md  SKILL.md  _meta.json
skills/1kalin/afrexai-decision-engine/: _meta.json
skills/1kalin/afrexai-email-triager/: _meta.json
skills/1kalin/afrexai-export-compliance/: _meta.json
skills/1kalin/afrexai-fundraising-playbook/: _meta.json
skills/1kalin/afrexai-hipaa-compliance/: _meta.json
skills/1kalin/afrexai-nodejs-production/: _meta.json
skills/1kalin/afrexai-observability-engine/: _meta.json
skills/1kalin/afrexai-personal-finance/: _meta.json
skills/1kalin/afrexai-qa-engine/: _meta.json
skills/1kalin/afrexai-warranty-management/: _meta.json
skills/1kalin/afrexai-whistleblower/: _meta.json
skills/1kalin/compliance-readiness/: _meta.json
skills/hakureirm/longport-mcp/: README.md  SKILL.md  _meta.json  claude_desktop_config.json  longport_mcp_web.py  mcp.json  publish.sh  pyproject.toml
(+1580 files in other folders)
