[project]
name = "longport-mcp"
version = "0.3.0"
description = "Longport Trading MCP Server - REST API + SDK hybrid"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hakureirm"}
]
keywords = ["mcp", "longport", "trading", "stock", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "apscheduler>=3.10.0",
    "yfinance>=0.2.0",
    "longport>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
minimal = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
longport-mcp = "longport_mcp_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["longport_mcp_web.py"]

[tool.hatch.build.targets.sdist]
include = [
    "longport_mcp_web.py",
    "README.md",
    "pyproject.toml",
    "longport_config.json.example",
]
